audio player audios added

--- a/audio.html
+++ b/audio.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="audio.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script><!--this is in phosperous icons website, navigating to gitHub and copy and paste the script--> 
+    <link rel="stylesheet" href="audio.js">
     <title>Audio player</title>
 </head>
 <body>
+    <audio src="AUD-20221106-WA0013.m4a"></audio>
+    <audio src="AUD-20230312-WA0005.m4a"></audio>
+    <audio src="AUD-20230324-WA0006.m4a"></audio>
+    <audio src="AUD-20240131-WA0007.opus"></audio>
     <div class="controls">
         <button class="btn"><i class="ph ph-skip-back"></i></button>
         <button class="btn"><i class="ph ph-pause"></i></button>
