mp3 player logic and audio files name change

--- a/audio.html
+++ b/audio.html
@@ -14,9 +14,9 @@
     <audio src="AUD-20230324-WA0006.m4a"></audio>
     <audio src="AUD-20240131-WA0007.opus"></audio>
     <div class="controls">
-        <button class="btn"><i class="ph ph-skip-back"></i></button>
-        <button class="btn"><i class="ph ph-pause"></i></button>
-        <button class="btn"><i class="ph ph-skip-forward"></i></button>
+        <button class="btn" id="previous"><i class="ph ph-skip-back"></i></button>
+        <button class="btn" id="pause"><i class="ph ph-pause"></i></button>
+        <button class="btn" id="next"><i class="ph ph-skip-forward"></i></button>
     </div>
 </body>
 </html>
