--- a/A1.html
+++ b/A1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="A1.css">
+    <link rel="stylesheet" href="A1.js">
     <script src="A1.js"></script>
     <title>Tanu's Playlist</title>
 </head>
@@ -11,12 +12,11 @@
     <div class="player">
         <audio id="audioPlayer" src="Kambada.m4a"></audio>
         <div class="controls">
-            <button id="prevs">previous</button>
-            <button id="play">play</button>
+            <button id="prevs">Previous</button>
+            <button id="play">Play</button>
             <button id="pause">Pause</button>
             <button id="next">Next</button>
         </div>
-
     </div>
 </body>
 </html>
