--- a/A1.html
+++ b/A1.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="A1.css">
     <link rel="stylesheet" href="A1.js">
     <script src="A1.js"></script>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script><!--this is in phosperous icons website, navigating to gitHub and copy and paste the script--> 
     <title>Tanu's Playlist</title>
 </head>
 <body>
     <div class="player">
         <audio id="audioPlayer" src="Kambada.m4a"></audio>
         <div class="controls">
-            <button id="prevs">Previous</button>
+            <button id="prevs"><i class="ph ph-skip-back"></button>
             <button id="play">Play</button>
             <button id="pause">Pause</button>
             <button id="next">Next</button>
